Apply asynchronous, batch programming on Data module 1. Service and repository have single, batch methods independantly 2. In batch methods, coroutines are generated according to batch size and work asynchronously 3. Implemented and modified test codes